Load timeline gaps depending on scroll direction (AND-190)
Closes #70, closes #154, closes #147, closes #281